--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>neon</title>
-    <meta content="neonbot.me" property="og:title" />
-    <meta content="A piece of mind" property="og:description" />
+    <meta content="Neon" property="og:title" />
+    <meta content="Neon is a multipurpose bot built to make your server a nicer place than it already is!" property="og:description" />
     <meta content="#E6E6FA" data-react-helmet="true" name="theme-color" />
     <meta content="https://cdn.discordapp.com/attachments/966690916213587978/966690943594037288/neon_logo.jpg" property="og:image" />
     <link href="Main.css" rel="stylesheet">
