--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>neon</title>
     <meta content="Neon" property="og:title" />
     <meta content="Neon is a multipurpose bot built to make your server a nicer place than it already is!" property="og:description" />
-    <meta content="#E6E6FA" data-react-helmet="true" name="theme-color" />
-    <meta content="https://cdn.discordapp.com/attachments/966690916213587978/966690943594037288/neon_logo.jpg" property="og:image" />
+    <meta content="#2f3137" data-react-helmet="true" name="theme-color" />
+    <meta content="https://media.discordapp.net/attachments/966690916213587978/968970186600382555/Neon_logo.jpg?width=675&height=675" property="og:image" />
     <link href="Main.css" rel="stylesheet">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/966690916213587978/966692469930602586/neon.png">
 </head>
