--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="Main.css" rel="stylesheet">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/966690916213587978/966692469930602586/neon.png">
 </head>
-<body style="background-color: #73a1b8;">
+<body style="background-color: #2f3137;">
     
 </body>
 </html>
